--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         // Load user information on each page load
         $.ajax({
           type: "GET",
-          url: "http://localhost/food-recipe-app/rest/me",
+          url: "http://food-recipe-ibu-a36511ad80e4.herokuapp.com/rest/me",
           headers: {
             Authorization: "Bearer " + localStorage.getItem("token"),
           },
@@ -138,7 +138,7 @@
           },
 
           error: function (xhr, status, error) {
-            $("#profileLink, #logoutLink").hide(); 
+            $("#profileLink, #logoutLink").hide();
             $("#loginLink, #registerLink").show();
           },
         });
@@ -158,7 +158,7 @@
           // Remove the token from local storage
           localStorage.removeItem("token");
 
-          // Update the UI 
+          // Update the UI
           $("#profileLink, #logoutLink").hide();
           $("#loginLink, #registerLink").show();
 
