--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         // Load user information on each page load
         $.ajax({
           type: "GET",
-          url: "http://food-recipe-ibu-a36511ad80e4.herokuapp.com/rest/me",
+          url: "https://food-recipe-ibu-a36511ad80e4.herokuapp.com/rest/me",
           headers: {
             Authorization: "Bearer " + localStorage.getItem("token"),
           },
