--- a/pages/profile.html
+++ b/pages/profile.html
@@ -200,8 +200,7 @@
                 id="category_id"
                 name="category_id"
                 required
-              >
-              </select>
+              ></select>
             </div>
             <button type="submit" class="btn btn-primary">Add Recipe</button>
           </form>
@@ -317,6 +316,6 @@
       </div>
     </div>
 
-    <script src="/food-recipe-app/js/profile.js"></script>
+    <script src="/js/profile.js"></script>
   </body>
 </html>
